tests/test_files/errors/any1.over
arr1: [ [[]] ]+[ [[2]] ]+[ [['c']] ]
